--- a/.github/workflows/releasepkg.yml
+++ b/.github/workflows/releasepkg.yml
@@ -23,16 +23,7 @@ jobs:
           rm -rf oras_0.12.0_*.tar.gz oras-install/
           echo "Oras installed!"
           
-      - name: Install Cosign
-        uses: sigstore/cosign-installer@main
-        with:
-          cosign-release: 'v1.8.0' # optional
           
       - name: Running action   
-        uses: ruchika-jain/package-action@v0.52
+        uses: ruchika-jain/package-action@1.0.1
         id: publish-action
-
-      - name: Signing action
-        uses: ruchika-jain/sign-package@v0.44
-        with: 
-          package-name: ${{ steps.publish-action.outputs.package-name }}
