--- a/.github/workflows/releasepkg.yml
+++ b/.github/workflows/releasepkg.yml
@@ -27,3 +27,5 @@ jobs:
       - name: Running action   
         uses: ruchika-jain/package-action@1.0.1
         id: publish-action
+        with: 
+            package-name: orgactionpkg
